--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+  
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap');
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins';
+}
+
+html{
+  scroll-behavior: smooth;
+  box-sizing: border-box;
+}
+
+body{
+    overflow-x: hidden; 
+  overflow-y: hidden; 
+}
+:root {
+  --primary-color :#86EE60;
+  --secondary-color :#ffffffff;
+
+}
+
+.active {
+  @apply text-[] font-bold border-r-4 border-[--primary-color] ;
+}
